Resolve conflicts with new nodes (same JS ids)

--- a/de.bund.bfr.knime.fsklab.deprecatednodes/build.properties
+++ b/de.bund.bfr.knime.fsklab.deprecatednodes/build.properties
@@ -14,5 +14,5 @@ bin.includes = META-INF/,\
                sedml_libs/jlibsedml-2.2.3.jar,\
                sedml_libs/jmathml-2.2.1.jar,\
                sedml_libs/xom-1.2.5.jar,\
-               js-lib/,\
+               js-lib-1_7_2/,\
                js-src-1_7_2/
