Move bootstrap3_typeahead to common JS project (#609)
* Move bootstrap3_typeahead to common JS project

* Use full path in JS library.

--- a/de.bund.bfr.knime.js/plugin.xml
+++ b/de.bund.bfr.knime.js/plugin.xml
@@ -9,6 +9,12 @@
        <importResource relativePath="js-lib/backbone/backbone-min.js" type="JAVASCRIPT" />
        <webDependency webResourceBundleID="underscore_1.9.1" />
      </webResourceBundle>
+     
+     <webResourceBundle name="Bootstrap 3 Typeahead" version="4.0.2" webResourceBundleID="bootstrap3_typeahead_4.0.2"
+       debug="false">
+       <webResource relativePathSource="js-lib/bootstrap3_typeahead" relativePathTarget="js-lib/bootstrap3_typeahead" />
+       <importResource relativePath="js-lib/bootstrap3_typeahead/bootstrap3-typeahead.min.js" type="JAVASCRIPT" />
+     </webResourceBundle>
    </extension>
    
 </plugin>
