--- a/de.bund.bfr.knime.js/plugin.xml
+++ b/de.bund.bfr.knime.js/plugin.xml
@@ -15,6 +15,12 @@
        <webResource relativePathSource="js-lib/bootstrap3_typeahead" relativePathTarget="js-lib/bootstrap3_typeahead" />
        <importResource relativePath="js-lib/bootstrap3_typeahead/bootstrap3-typeahead.min.js" type="JAVASCRIPT" />
      </webResourceBundle>
+     
+     <webResourceBundle name="datepicker" version="1.9.0" webResourceBundleID="datepicker_1.9.0"
+       debug="false">
+       <webResource relativePathSource="js-lib/datepicker" relativePathTarget="js-lib/datepicker" />
+       <importResource relativePath="js-lib/datepicker/bootstrap-datepicker.min.js" type="JAVASCRIPT" />
+     </webResourceBundle>
    </extension>
    
 </plugin>
