Move lodash to common JS project
#603

--- a/de.bund.bfr.knime.js/plugin.xml
+++ b/de.bund.bfr.knime.js/plugin.xml
@@ -15,6 +15,11 @@
        <webResource relativePathSource="js-lib/bootstrap3_typeahead" relativePathTarget="js-lib/bootstrap3_typeahead" />
        <importResource relativePath="js-lib/bootstrap3_typeahead/bootstrap3-typeahead.min.js" type="JAVASCRIPT" />
      </webResourceBundle>
+     
+     <webResourceBundle name="lodash" version="4.17.15" webResourceBundleID="Lodash_4.17.15" debug="false">
+       <webResource relativePathSource="js-lib/lodash" relativePathTarget="js-lib/lodash" />
+       <importResource relativePath="js-lib/lodash/lodash.min.js" type="JAVASCRIPT" />
+     </webResourceBundle>
    </extension>
    
 </plugin>
