--- a/de.bund.bfr.knime.js/plugin.xml
+++ b/de.bund.bfr.knime.js/plugin.xml
@@ -15,6 +15,11 @@
        <webResource relativePathSource="js-lib/bootstrap3_typeahead" relativePathTarget="js-lib/bootstrap3_typeahead" />
        <importResource relativePath="js-lib/bootstrap3_typeahead/bootstrap3-typeahead.min.js" type="JAVASCRIPT" />
      </webResourceBundle>
+     
+     <webResourceBundle name="underscore" version="1.9.1" webResourceBundleID="underscore_1.9.1" debug="false">
+       <webResource relativePathSource="js-lib/underscore" relativePathTarget="js-lib/underscore" />
+       <importResource relativePath="js-lib/underscore/underscore-min.js" type="JAVASCRIPT" />
+     </webResourceBundle>
    </extension>
    
 </plugin>
