--- a/de.bund.bfr.knime.js/plugin.xml
+++ b/de.bund.bfr.knime.js/plugin.xml
@@ -37,6 +37,15 @@
        <webResource relativePathSource="js-lib/codemirror-5.49.2/" relativePathTarget="codemirror" />
        <importResource relativePath="codemirror/lib/codemirror.css" type="CSS" />
      </webResourceBundle>
+     
+     <webResourceBundle name="JointJS" version="3.1.1" webResourceBundleID="JointJS_3.1.1" debug="false">
+       <webResource relativePathSource="js-lib/jointjs" relativePathTarget="js-lib/jointjs" />
+       <importResource relativePath="js-lib/jointjs/joint.min.css" type="CSS" />
+       <importResource relativePath="js-lib/jointjs/joint.min.js" type="JAVASCRIPT" />
+       <webDependency webResourceBundleID="jQuery_3.3.1" />
+	   <webDependency webResourceBundleID="backbone_1.4.0" />
+	   <webDependency webResourceBundleID="Lodash_4.17.15" />
+     </webResourceBundle>
    </extension>
    
 </plugin>
