Move bfr JS libs to common project #621

--- a/de.bund.bfr.knime.fsklab.nodes/build.properties
+++ b/de.bund.bfr.knime.fsklab.nodes/build.properties
@@ -13,7 +13,6 @@ bin.includes = META-INF/,\
                sedml_libs/xom-1.2.5.jar,\
                libs/batik-svg-dom.jar,\
                libs/batik-util-1.7.jar,\
-               js-src/,\
-               js-lib/
+               js-src/
 source.. = src/
            output.. = bin/
