--- a/de.bund.bfr.knime.fsklab.deprecatednodes/plugin.xml
+++ b/de.bund.bfr.knime.fsklab.deprecatednodes/plugin.xml
@@ -152,73 +152,141 @@
        <webDependency webResourceBundleID="bootstrap_3.3.6"></webDependency>
      </webResourceBundle>
      
-     <!-- JS and CSS code for Fsk Joiner node -->
      <webResourceBundle debug="true" name="FSK Joiner" usesDefine="true" version="1.0.0"
        webResourceBundleID="de.bund.bfr.knime.fsklab.v1.7.2.joiner.bundle">
      
        <webResource
-         relativePathSource="js-src/de/bund/bfr/knime/fsklab/1.7.2/joiner"
-         relativePathTarget="js-src/de/bund/bfr/knime/fsklab/1.7.2/joiner">
+         relativePathSource="js-src/de/bund/bfr/knime/fsklab/nodes/joiner/"
+         relativePathTarget="js-src/de/bund/bfr/knime/fsklab/nodes/joiner/">
        </webResource>
        
-       <importResource relativePath="js-src/de/bund/bfr/knime/fsklab/1.7.2/joiner/joiner.css" type="CSS" />
-       <importResource relativePath="js-src/de/bund/bfr/knime/fsklab/1.7.2/joiner/joiner.js" type="JAVASCRIPT" />
+       <importResource relativePath="js-src/de/bund/bfr/knime/fsklab/nodes/joiner/joiner.css" type="CSS" />
+       <importResource relativePath="js-src/de/bund/bfr/knime/fsklab/nodes/joiner/joiner.js" type="JAVASCRIPT" />
        
-       <importResource relativePath="js-src/de/bund/bfr/knime/fsklab/1.7.2/joiner/bootstrap-treeview.min.css" type="CSS" />
-       <importResource relativePath="js-src/de/bund/bfr/knime/fsklab/1.7.2/joiner/bootstrap-treeview.min.js" type="JAVASCRIPT" />
-       
+       <importResource relativePath="js-src/de/bund/bfr/knime/fsklab/nodes/joiner/bootstrap-treeview.min.css" type="CSS" />
+       <importResource relativePath="js-src/de/bund/bfr/knime/fsklab/nodes/joiner/bootstrap-treeview.min.js" type="JAVASCRIPT" />
        <!-- Dependencies -->
        <webDependency webResourceBundleID="fskeditor" />
-	   <webDependency webResourceBundleID="JointJS_3.1.1" />
+	   <webDependency webResourceBundleID="de.bund.bfr.knime.fsklab.nodes.joiner.jointjs"></webDependency>
+	   <webDependency webResourceBundleID="de.bund.bfr.knime.fsklab.nodes.joiner.jointjscss"></webDependency>
 	   <webDependency webResourceBundleID="de.bund.bfr.knime.fsklab.nodes.joiner.bundle.js" />
+	 </webResourceBundle>
+	 
+	 <!-- JS and CSS code for Fsk Editor JS node -->
+	 <webResourceBundle debug="true" name="Jointjs" version="1.0.0"
+	   webResourceBundleID="de.bund.bfr.knime.fsklab.nodes.joiner.jointjs">
+	   <webResource
+	     relativePathSource="js-src/de/bund/bfr/knime/fsklab/nodes/joiner/jointjs.js"
+	     relativePathTarget="de/bund/bfr/knime/fsklab/nodes/joiner/jointjs.js">
+	   </webResource>
+	   <importResource relativePath="de/bund/bfr/knime/fsklab/nodes/joiner/jointjs.js" type="JAVASCRIPT" />
+	   
+	   <webDependency webResourceBundleID="de.bund.bfr.knime.fsklab.nodes.joiner.backbone" />
+	   <webDependency webResourceBundleID="de.bund.bfr.knime.fsklab.nodes.joiner.lodash.min.js" />
+	 </webResourceBundle>
+	 
+	 <webResourceBundle debug="true" name="backbone" version="1.0.0"
+       webResourceBundleID="de.bund.bfr.knime.fsklab.nodes.joiner.backbone">
+       <webResource
+         relativePathSource="js-src/de/bund/bfr/knime/fsklab/nodes/joiner/jointjs/backbone.js"
+         relativePathTarget="de/bund/bfr/knime/fsklab/nodes/joiner/jointjs/backbone.js">
+       </webResource>
+       <importResource relativePath="de/bund/bfr/knime/fsklab/nodes/joiner/jointjs/backbone.js" type="JAVASCRIPT" />
+       
+       <webDependency webResourceBundleID="de.bund.bfr.knime.fsklab.nodes.joiner.underscore.js" />
+    </webResourceBundle>
+    
+    <webResourceBundle debug="true" name="underscore" version="1.0.0"
+      webResourceBundleID="de.bund.bfr.knime.fsklab.nodes.joiner.underscore.js">
+      <webResource
+        relativePathSource="js-src/de/bund/bfr/knime/fsklab/nodes/joiner/jointjs/underscore.js"
+        relativePathTarget="de/bund/bfr/knime/fsklab/nodes/joiner/jointjs/underscore.js">
+      </webResource>
+      <importResource relativePath="de/bund/bfr/knime/fsklab/nodes/joiner/jointjs/underscore.js" type="JAVASCRIPT" />
+    </webResourceBundle>
+	
+	<webResourceBundle debug="true" name="lodash" version="1.0.0"
+      webResourceBundleID="de.bund.bfr.knime.fsklab.nodes.joiner.lodash.min.js">
+      <webResource
+        relativePathSource="js-src/de/bund/bfr/knime/fsklab/nodes/joiner/jointjs/lodash.min.js"
+        relativePathTarget="de/bund/bfr/knime/fsklab/nodes/joiner/jointjs/lodash.min.js">
+      </webResource>
+      <importResource relativePath="de/bund/bfr/knime/fsklab/nodes/joiner/jointjs/lodash.min.js" type="JAVASCRIPT" />
+    </webResourceBundle>
+    
+    <webResourceBundle debug="true" name="Jointjscss" version="1.0.0"
+      webResourceBundleID="de.bund.bfr.knime.fsklab.nodes.joiner.jointjscss">
+      <webResource
+        relativePathSource="js-src/de/bund/bfr/knime/fsklab/nodes/joiner/jointjs.css"
+        relativePathTarget="de/bund/bfr/knime/fsklab/nodes/joiner/jointjs.css">
+      </webResource>
+      <importResource relativePath="de/bund/bfr/knime/fsklab/nodes/joiner/jointjs.css" type="CSS" />
+    </webResourceBundle>
+    
+    <!-- JS and CSS code for Fsk Editor JS node -->
+	<webResourceBundle debug="true" name="Jointjs" version="1.0.0"
+	  webResourceBundleID="de.bund.bfr.knime.fsklab.nodes.joiner.jointjs">
+	  <webResource
+	    relativePathSource="js-src/de/bund/bfr/knime/fsklab/nodes/joiner/jointjs.js"
+	    relativePathTarget="de/bund/bfr/knime/fsklab/nodes/joiner/jointjs.js">
+	  </webResource>
+	  <importResource relativePath="de/bund/bfr/knime/fsklab/nodes/joiner/jointjs.js" type="JAVASCRIPT" />
+	   
+	  <webDependency webResourceBundleID="de.bund.bfr.knime.fsklab.nodes.joiner.backbone" />
+	  <webDependency webResourceBundleID="de.bund.bfr.knime.fsklab.nodes.joiner.lodash.min.js" />
 	</webResourceBundle>
-	
-	<webResourceBundle debug="true" name="fskeditor" usesDefine="true" version="1.0.0" webResourceBundleID="fskeditor">
-	
+    
+    <webResourceBundle debug="true" name="Jointjscss" version="1.0.0"
+      webResourceBundleID="de.bund.bfr.knime.fsklab.nodes.joiner.jointjscss">
       <webResource
-        relativePathSource="js-src/de/bund/bfr/knime/fsklab/1.7.2/joiner/fskemfeditor"
-        relativePathTarget="js-src/de/bund/bfr/knime/fsklab/1.7.2/joiner/fskemfeditor">
+        relativePathSource="js-src/de/bund/bfr/knime/fsklab/nodes/joiner/jointjs.css"
+        relativePathTarget="de/bund/bfr/knime/fsklab/nodes/joiner/jointjs.css">
       </webResource>
-      <importResource relativePath="js-src/de/bund/bfr/knime/fsklab/1.7.2/joiner/fskemfeditor/jquery.min.js" type="JAVASCRIPT" />
-      <importResource relativePath="js-src/de/bund/bfr/knime/fsklab/1.7.2/joiner/fskemfeditor/JQueryUI.js" type="JAVASCRIPT" />
-      <importResource relativePath="js-src/de/bund/bfr/knime/fsklab/1.7.2/joiner/fskemfeditor/jquery-ui.css" type="CSS" />
-      <importResource relativePath="js-src/de/bund/bfr/knime/fsklab/1.7.2/joiner/fskemfeditor/jquery.min.js" type="JAVASCRIPT" />
-      <importResource relativePath="js-src/de/bund/bfr/knime/fsklab/1.7.2/joiner/fskemfeditor/codemirror.js" type="JAVASCRIPT" />
-      <importResource relativePath="js-src/de/bund/bfr/knime/fsklab/1.7.2/joiner/fskemfeditor/codemirror.css" type="CSS" />
-      <importResource relativePath="js-src/de/bund/bfr/knime/fsklab/1.7.2/joiner/fskemfeditor/r.js" type="JAVASCRIPT" />
-      <importResource relativePath="js-src/de/bund/bfr/knime/fsklab/1.7.2/joiner/fskemfeditor/bootstrap.min.css" type="CSS" />
-      <importResource relativePath="js-src/de/bund/bfr/knime/fsklab/1.7.2/joiner/fskemfeditor/bootstrap-tabcollapse.js" type="JAVASCRIPT" />
-      <importResource relativePath="js-src/de/bund/bfr/knime/fsklab/1.7.2/joiner/fskemfeditor/bootstrap.min.js" type="JAVASCRIPT" />
+      <importResource relativePath="de/bund/bfr/knime/fsklab/nodes/joiner/jointjs.css" type="CSS" />
+    </webResourceBundle>
+    
+    <webResourceBundle debug="true" name="fskeditor" usesDefine="true" version="1.0.0" webResourceBundleID="fskeditor">
+     
+      <webResource
+        relativePathSource="js-src/de/bund/bfr/knime/fsklab/nodes/joiner/fskemfeditor"
+        relativePathTarget="js-src/de/bund/bfr/knime/fsklab/nodes/joiner/fskemfeditor" />     
+      <importResource relativePath="js-src/de/bund/bfr/knime/fsklab/nodes/joiner/fskemfeditor/jquery.min.js" type="JAVASCRIPT" />
+      <importResource relativePath="js-src/de/bund/bfr/knime/fsklab/nodes/joiner/fskemfeditor/JQueryUI.js" type="JAVASCRIPT" />
+      <importResource relativePath="js-src/de/bund/bfr/knime/fsklab/nodes/joiner/fskemfeditor/jquery-ui.css" type="CSS" />
+      <importResource relativePath="js-src/de/bund/bfr/knime/fsklab/nodes/joiner/fskemfeditor/codemirror.js" type="JAVASCRIPT" />
+      <importResource relativePath="js-src/de/bund/bfr/knime/fsklab/nodes/joiner/fskemfeditor/codemirror.css" type="CSS" />
+      <importResource relativePath="js-src/de/bund/bfr/knime/fsklab/nodes/joiner/fskemfeditor/r.js" type="JAVASCRIPT" />
+      <importResource relativePath="js-src/de/bund/bfr/knime/fsklab/nodes/joiner/fskemfeditor/bootstrap.min.css" type="CSS" />
+      <importResource relativePath="js-src/de/bund/bfr/knime/fsklab/nodes/joiner/fskemfeditor/bootstrap-tabcollapse.js" type="JAVASCRIPT" />
+      <importResource relativePath="js-src/de/bund/bfr/knime/fsklab/nodes/joiner/fskemfeditor/bootstrap.min.js" type="JAVASCRIPT" />
       
       <webResource
-        relativePathSource="js-src/de/bund/bfr/knime/fsklab/1.7.2/joiner/emfbundle"
-        relativePathTarget="js-src/de/bund/bfr/knime/fsklab/1.7.2/joiner/emfbundle">
-      </webResource>
-      <importResource relativePath="js-src/de/bund/bfr/knime/fsklab/1.7.2/joiner/emfbundle/punycode.js" type="JAVASCRIPT" />
-      <importResource relativePath="js-src/de/bund/bfr/knime/fsklab/1.7.2/joiner/emfbundle/sweetalert.js" type="JAVASCRIPT" />
-      <importResource relativePath="js-src/de/bund/bfr/knime/fsklab/1.7.2/joiner/emfbundle/ajv.min.js" type="JAVASCRIPT" />
-      <importResource relativePath="js-src/de/bund/bfr/knime/fsklab/1.7.2/joiner/emfbundle/lodash.js" type="JAVASCRIPT" />
-      <importResource relativePath="js-src/de/bund/bfr/knime/fsklab/1.7.2/joiner/emfbundle/App.css" type="CSS" />
-      
+        relativePathSource="js-src/de/bund/bfr/knime/fsklab/nodes/joiner/emfbundle"
+        relativePathTarget="js-src/de/bund/bfr/knime/fsklab/nodes/joiner/emfbundle" />
+      <importResource relativePath="js-src/de/bund/bfr/knime/fsklab/nodes/joiner/emfbundle/punycode.js" type="JAVASCRIPT" />
+      <importResource relativePath="js-src/de/bund/bfr/knime/fsklab/nodes/joiner/emfbundle/sweetalert.js" type="JAVASCRIPT" />
+      <importResource relativePath="js-src/de/bund/bfr/knime/fsklab/nodes/joiner/emfbundle/ajv.min.js" type="JAVASCRIPT" />
+      <importResource relativePath="js-src/de/bund/bfr/knime/fsklab/nodes/joiner/emfbundle/lodash.js" type="JAVASCRIPT" />
+      <importResource relativePath="js-src/de/bund/bfr/knime/fsklab/nodes/joiner/emfbundle/App.css" type="CSS" />      
     </webResourceBundle>
     
     <webResourceBundle debug="true" name="de.bund.bfr.knime.fsklab.nodes.joiner.bundle.js" usesDefine="true" version="1.0.0"
       webResourceBundleID="de.bund.bfr.knime.fsklab.nodes.joiner.bundle.js">
       
       <webResource
-        relativePathSource="js-src/de/bund/bfr/knime/fsklab/1.7.2/joiner/emfbundle/bundle.js"
+        relativePathSource="js-src/de/bund/bfr/knime/fsklab/nodes/joiner/emfbundle/bundle.js"
         relativePathTarget="de/bund/bfr/knime/fsklab/nodes/joiner/emfbundle/bundle.js">
       </webResource>
       <importResource relativePath="de/bund/bfr/knime/fsklab/nodes/joiner/emfbundle/bundle.js" type="JAVASCRIPT" />
       
       <webDependency webResourceBundleID="react" />
-      <webDependency webResourceBundleID="Lodash_4.17.15" />
+      <webDependency webResourceBundleID="de.bund.bfr.knime.fsklab.nodes.joiner.lodash.min.js" />
     </webResourceBundle>
     
     <webResourceBundle debug="true" name="react" usesDefine="true" version="1.0.0" webResourceBundleID="react">
       
       <webResource
-        relativePathSource="js-src/de/bund/bfr/knime/fsklab/1.7.2/joiner/react/"
+        relativePathSource="js-src/de/bund/bfr/knime/fsklab/nodes/joiner/react/"
         relativePathTarget="js-src/de/bund/bfr/knime/fsklab/nodes/joiner/react/">
       </webResource>
       
